import { babelTransform, getExpectSnapshot } from "./testUtils";

describe("k api", () => {
  describe.each([[undefined], ["classic" as const], ["automatic" as const]])(
    "Snapshot tests (runtime: %s)",
    () => {
      test("basic usage should match snapshot", () => {
        // Arrange
        const inputCode = `
        import { k } from '@kuma-ui/core'
        function App() {
          return <k.div fontSize={24}></k.div>
        }
      `;
        // Act
        const result = babelTransform(inputCode);
        // Assert
        expect(getExpectSnapshot(result)).toMatchSnapshot();
      });

      test("using responsive props should match snapshot", () => {
        // Arrange
        const inputCode = `
        import { k } from '@kuma-ui/core'
        function App() {
          return <k.a fontSize={[16, 24]} />
        }
      `;
        // Act
        const result = babelTransform(inputCode);
        // Assert
        expect(getExpectSnapshot(result)).toMatchSnapshot();
      });

      test("using space props should match snapshot", () => {
        // Arrange
        const inputCode = `
        import { k } from '@kuma-ui/core'
        function App() {
          return <k.div p={2} />
        }
      `;
        // Act
        const result = babelTransform(inputCode);
        // Assert
        expect(getExpectSnapshot(result)).toMatchSnapshot();
      });

      test("using pseudo elements should match snapshot", () => {
        // Arrange
        const inputCode = `
        import { k } from '@kuma-ui/core'
        function App() {
          return <k.div p={2} _after={{ color: 'blue' }} />
        }
      `;
        // Act
        const result = babelTransform(inputCode);
        // Assert
        expect(getExpectSnapshot(result)).toMatchSnapshot();
      });

      test("using pseudo props should match snapshot", () => {
        // Arrange
        const inputCode = `
        import { k } from '@kuma-ui/core'
        function App() {
          return <k.span p={2} _hover={{ color: 'red' }} />
        }
      `;
        // Act
        const result = babelTransform(inputCode);
        // Assert
        expect(getExpectSnapshot(result)).toMatchSnapshot();
      });

      test("using pseudo elements with conditional should match snapshot", () => {
        // Arrange
        const inputCode = `
        import { k } from '@kuma-ui/core'
        function App({ flag }) {
          return <k.div p={2} m={flag ? 100 : 10} _hover={{ color: flag ? 'blue' : 'red', backgroundColor: flag ? 'gray' : 'white' }} />
        }
      `;
        // Act
        const result = babelTransform(inputCode);
        // Assert
        expect(getExpectSnapshot(result)).toMatchSnapshot();
      });

      test("using pseudo elements with top-level conditional should match snapshot", () => {
        // Arrange
        const inputCode = `
        import { k } from '@kuma-ui/core'
        function App({ flag }) {
          return <k.div p={2} m={flag ? 100 : 10} _hover={flag ? { color: 'blue', bgColor: 'gray'} : {color: 'green'}} />
        }
      `;
        // Act
        const result = babelTransform(inputCode);
        // Assert
        expect(getExpectSnapshot(result)).toMatchSnapshot();
      });

      test("using className prop should match snapshot", () => {
        // Arrange
        const inputCode = `
        import { k, css } from '@kuma-ui/core'
        function App() {
          return (
            <k.div
              p={2}
              _hover={{ color: 'red' }}
              className={css({ boxShadow: '0 1px 2px 0 rgba(0, 0, 0, 0.05)' })}
            />
          )
        }
        `;
        // Act
        const result = babelTransform(inputCode);
        // Assert
        expect(getExpectSnapshot(result)).toMatchSnapshot();
      });

      test("should match snapshot when k is used more than once", () => {
        // Arrange
        const inputCode = `
        import { k } from '@kuma-ui/core'
        function App() {
          return <k.div fontSize={24}><k.div fontSize={24}></k.div></k.div>
        }
      `;
        // Act
        const result = babelTransform(inputCode);
        // Assert
        expect(getExpectSnapshot(result)).toMatchSnapshot();
      });
    }
  );
});
